# chewdoc

./: .cursorrules  .gitignore  Makefile  README.md  doc-converter-spec.md  pyproject.toml  pyproject.toml.example  pytest.ini
chewdoc/formatters/: myst_writer.py
docs/: chewdoc.myst
src/chewdoc/: __init__.py  __main__.py  _version.py  ast_utils.py  cli.py  config.py  constants.py  core.py  doc_generation.py  metadata.py  module_processor.py  package_analysis.py  package_discovery.py  relationships.py  types.py  utils.py
src/chewdoc/formatters/: __init__.py  myst_writer.py
src/chewed/: __init__.py  __main__.py  _version.py  ast_utils.py  cli.py  config.py  constants.py  core.py  doc_generation.py  metadata.py  module_processor.py  package_analysis.py  package_discovery.py  relationships.py  stats.py  types.py  utils.py
src/chewed/formatters/: __init__.py  myst_writer.py
tests/: __init__.py  test_cli.py  test_config.py  test_constants.py  test_core.py  test_formatters.py  test_package_discovery.py  test_utils.py  test_version.py
tests/fixtures/valid_pkg/: module.py
