[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "chewdoc"
version = "0.1.0"
description = "ChewDoc is a powerful Python documentation generation tool that converts package metadata and docstrings into MyST-compatible markdown"
authors = [{name = "Roma Romanov", email = "puroman@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "click>=8.0.3", # CLI interface and command handling
    "requests>=2.26.0", # HTTP requests for PyPI API interactions
    "tomli>=2.0.1", # TOML parsing for pyproject.toml files
    "rich>=12.6.0", # Enhanced terminal output and formatting # Required for config validation
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov >=3.0.0",  # Test coverage reporting
    "flake8 >=4.0.1",  # Linting and code style checking
    "black >=22.3.0",  # Code formatting
    "pytest-mock>=3.12.0"  # Mocking for tests
]

# Configures setuptools to automatically find and include all Python packages
# that start with "chewdoc" when building the distribution

[tool.setuptools.packages.find]
where = ["src"]
include = ["chewdoc*"]

[project.scripts]
chewdoc = "chewdoc.cli:cli"

[tool.chewdoc]
exclude_patterns = ["__pycache__", "*.test", "tests/", "tests/**"]
known_types = { "Sequence" = "collections.abc.Sequence" }
enable_cross_references = true
max_example_lines = 15
