[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chewdoc"
version = "0.1.0"
description = "ChewDoc is a powerful Python documentation generation tool that converts package metadata and docstrings into MyST-compatible markdown"
authors = [{name = "Roma Romanov", email = "puroman@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "pydantic>=2.10.6",
    "astunparse>=1.6.3",
    "myst-parser>=4.0.0",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "flake8>=6.0.0",
    "black>=23.0.0"
]

# Configures setuptools to automatically find and include all Python packages
# that start with "chewdoc" when building the distribution

[tool.setuptools.packages.find]
where = ["src"]
include = ["chewdoc*"]

[project.scripts]
chewdoc = "chewdoc.cli:cli"
chew = "chewdoc.__main__:main"

[tool.chewdoc]
exclude_patterns = ["__pycache__", "*.test", "tests/", "tests/**"]
known_types = { "Sequence" = "collections.abc.Sequence" }
enable_cross_references = true
max_example_lines = 15

[tool.uv]
pip-version = "24.0"
