[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chewed"
version = "0.1.0"
description = "Code documentation toolkit for analyzing and generating LLM-friendly, but human-lovable code documentation. Currently supports Python packages."
authors = [{name = "Roma Romanov", email = "puroman@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "astroid>=3.0.0",
    "click",
    "tomli",
    "pydantic>=2.10.6",
    "myst-parser>=4.0.0",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0",
    "tabulate>=0.9.0"
]

# Configures setuptools to automatically find and include all Python packages
# that start with "chewed" when building the distribution

[tool.setuptools.packages.find]
where = ["src"]
include = ["chewed*"]
exclude = ["tests*"]

[project.scripts]
chewed = "chewed.cli:cli"
chew = "chewed.cli:cli"

[tool.chewed]
exclude_patterns = ["__pycache__", "*.test", "tests/", "tests/**"]
known_types = { "Sequence" = "collections.abc.Sequence" }
enable_cross_references = true
max_example_lines = 15
output_format = "myst"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]